# singfel

./: .project  CMakeLists.txt  LICENSE  Makefile  README.md  conf.py  doxytemplate  index.rst  make.bat
CMake/: ARMA_FindMKL.cmake  ARMA_FindMKL.cmake~  CMakeCache.txt  FindArmadillo.cmake  FindBoost.cmake~  FindHDF5.cmake  FindHDF5.cmake~  FindMKL.cmake  FindMKL.cmake~  Makefile  cmake_install.cmake
CMake/cuda/: FindPackageHandleStandardArgs.cmake  wgetFindCUDA
CMake/cuda/.svn/: all-wcprops  entries
CMake/cuda/FindCUDA/.svn/: all-wcprops  entries
CMake/src/: Makefile  cmake_install.cmake  cudaSPFEL
doc/examples/: aps.beam  aps.beam~  aps.geom  aps.geom~  runDiffractionVolume  runDiffractionVolume~
docs/: getting_started.rst  index.md  radiationDamage.rst
libsingfel/: CMakeLists.txt  beam.cpp  beam.cpp~  beam.h  detector.cpp  detector.cpp~  detector.h  diffraction.cpp  diffraction.cpp~  diffraction.cu  diffraction.cuh  diffraction.cu~  diffraction.h  diffractionPattern.cpp  diffractionPattern.h  diffractionVolume.cpp  diffractionVolume.h  image.h  io.cpp  io.cpp~  io.h  io.h~  particle.cpp  particle.h  particle.h~  temp.cpp  temp.h  toolbox.cpp  toolbox.h
matlab/ANN/: calcError.m  hiddenDeltas.m  initbp.m  outputDeltas.m  propagate.m  runbp.m  sigmoidFunc.m
scripts/: aps.geom  generateEulerList  generateImageList  loadVol.m  myStudy  runMergeDiffractionVolume
src/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  MaximumXCorrelation.cpp  MaximumXCorrelationMPI.cpp  beam.cpp  beam.h  detector.cpp  detector.h  diffraction.cu  diffraction.cuh  emcMPI.cpp  expandVolume.cpp  io.cpp  io.h  makeDiffractionVolume.cpp  makeDiffractionVolume.cpp~  makeDiffractionVolumeSingleAxis.cpp  mergeDiffractionVolume.cpp  mergeDiffractionVolume_1JB0.cpp  mergeDiffractionVolume_chignolin.cpp  mergeDiffractionVolume_testX.cpp  particle.cpp  particle.h  phaseRetrieval.cpp  pmi_rotationCheckS2E.cpp  polarXCorrelation.cpp  radiationDamage.cpp  radiationDamage.cpp~  radiationDamageMPI.cpp  radiationDamageS2E.cpp  reconMPI.cpp  sandboxBuild.cpp  spOptimize.cpp  spOptimize.cpp~  spQuaternion.cpp  spQuaternion.cpp~  spQuaternion_chignolin.cpp  toolbox.cpp  toolbox.h  (+3 more)
test/: CMakeLists.txt  CMakeLists.txt~  boostTest  boostTest.cpp  main.cpp  test_parallel_30tasks_9processes.sh  test_serial_10tasks.sh  test_serial_1task.sh
