CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SINGFELPROJECT)

SET(CMAKE_CPP_FLAGS "-g -Wall -DTHREADED -fopenmp")

IF(CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS("-Wall")
ELSE()
  MESSAGE(FATAL_ERROR "CMakeLists.txt has not been tested/written for your compiler.")
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(libsingfel)
