INCLUDE_DIRECTORIES(${SINGFELPROJECT_SOURCE_DIR}/test)
LINK_DIRECTORIES(${SINGFELPROJECT_BINARY_DIR}/test)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SINGFELPROJECT_SOURCE_DIR}/test)
#SET(LIBSINGFEL ${SINGFELPROJECT_SOURCE_DIR}/libsingfel)

#find_package(CUDA)
IF(CUDA_FOUND)
  MESSAGE("cuda found")
  MESSAGE("${CUDA_LIBRARIES}")
  MESSAGE("${ARMADILLO_LIBRARIES}")
    
  add_definitions(-DCOMPILE_WITH_CUDA) # set #define COMPILE_WITH_CUDA to 1 in .cpp

ELSEIF(NOT CUDA_FOUND)
MESSAGE("WHAT THE !!!!!!!! ${LIBSINGFEL}")
MESSAGE("WHAT THE !!!!!!!! ${Boost_LIBRARIES}")
  ADD_EXECUTABLE(boostTest boostTest.cpp ${LIBSINGFEL}/io.cpp ${LIBSINGFEL}/detector.cpp ${LIBSINGFEL}/beam.cpp ${LIBSINGFEL}/particle.cpp ${LIBSINGFEL}/diffraction.cpp ${LIBSINGFEL}/toolbox.cpp ${LIBSINGFEL}/diffraction.cu)
  TARGET_LINK_LIBRARIES(boostTest ${Boost_LIBRARIES} ${ARMADILLO_LIBRARIES} ${HDF5_LIBRARIES} ${MPI_LIBRARIES} )  

ENDIF()
